Add custom javascript, clear method for rounds, move task to TASK.md

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,16 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <title>Rock, Paper, Scissors</title>
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/custom.js"></script>
 </head>
-<body>
+<body onload="hello(); statistics();">
 
-<div class="alert alert-warning alert-dismissible fade show" role="alert">
-    <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-    </button>
+<div class="alert alert-warning" role="alert" style="display:none;">
+    <div id="alert-message">Oops!</div>
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -29,21 +27,34 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <button type="button" class="btn btn-primary" style="margin: 5px">Play Round</button>
+                <button type="button" class="btn btn-primary" style="margin: 5px" onclick="play()">Play Round</button>
             </li>
             <li class="nav-item">
-                <button type="button" class="btn btn-danger" style="margin: 5px">Restart game</button>
+                <button type="button" class="btn btn-danger" style="margin: 5px" onclick="restart()">Restart game</button>
             </li>
         </ul>
-        <div>
+        <div id="hello-user" style="margin: 5px">
+        </div>
+        <div id="global-statistics"  style="margin: 5px">
             Global statistics here
         </div>
     </div>
 </nav>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="js/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>-->
-<script src="js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<div class="panel panel-default">
+    <div class="panel-body" id="content">
+        <table class="table table-dark">
+            <thead>
+            <tr>
+                <th scope="col">Player 1</th>
+                <th scope="col">Player 2</th>
+                <th scope="col">Result</th>
+            </tr>
+            </thead>
+            <tbody id="statistics">
+            </tbody>
+        </table>
+    </div>
+</div>
+
 </body>
 </html>
