--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,7 +11,7 @@
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/custom.js"></script>
 </head>
-<body onload="hello(); statistics();">
+<body onload="hello(); refreshLoop();">
 
 <div class="alert alert-warning" role="alert" style="display:none;">
     <div id="alert-message">Oops!</div>
